--- a/css/styles.css
+++ b/css/styles.css
@@ -3866,7 +3866,7 @@ textarea.form-control-lg {
 .nav-link {
   display: block;
   padding: 0.5rem 1rem;
-  color: #e6a756;
+  color: #fffff;
   text-decoration: none;
   transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out;
 }
@@ -3876,7 +3876,7 @@ textarea.form-control-lg {
   }
 }
 .nav-link:hover, .nav-link:focus {
-  color: #b88645;
+  color: #ffffff;
 }
 .nav-link.disabled {
   color: #6c757d;
